--- a/recommendations/templates/recommender/movie_detail.html
+++ b/recommendations/templates/recommender/movie_detail.html
@@ -130,6 +130,9 @@
         <!-- Tags -->
         {% include "component/movie/tags.html" %}
 
+        <!--Review-->
+        {% include "component/movie/reviews.html" %}
+
         <!-- Recommend -->
         {% include "component/movie/recommend.html" %}
       </div>
